--- a/src/style.css
+++ b/src/style.css
@@ -2,26 +2,27 @@ body {
   background-color: rgb(201, 200, 200);
 }
 
-select{
-    font-size: 18px;
-    width: 100%;
-    padding: 8px;
-    border-radius: 8px;    
+select {
+  font-size: 18px;
+  width: 100%;
+  padding: 8px;
+  border-radius: 8px;
+  border: 2px solid black;
 }
 
-footer{
-    text-align: center;
-    font-size: 20px;
-    color: rgb(63, 59, 59);
+footer {
+  text-align: center;
+  font-size: 20px;
+  color: rgb(63, 59, 59);
 }
 
-footer a{
-    color: rgb(97, 44, 146);
-    text-decoration: none;
+footer a {
+  color: rgb(97, 44, 146);
+  text-decoration: none;
 }
 
-footer a:hover{
-    opacity: 0.8;
+footer a:hover {
+  opacity: 0.8;
 }
 
 .container {
@@ -31,52 +32,52 @@ footer a:hover{
   max-width: 680px;
   border-radius: 12px;
   padding: 10px;
+  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
 }
 
-.location{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-    background-color: #fff;
-    border-radius: 8px;
-    margin: 14px 8px;
-    font-size: 32px;
+.location {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  margin: 14px 8px;
+  font-size: 32px;
 }
 
-.city{
-    font-weight: bold;
+.city {
+  font-weight: bold;
 }
 
-.date{
-    opacity: 0.8;
-    font-size: 20px;
+.date {
+  opacity: 0.8;
+  font-size: 20px;
 }
 
-.time{
-    font-weight: bold;
-    font-size: 22px;
-    text-align: center;
-    padding: 15px 5px;
+.time {
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
+  padding: 15px 5px;
 }
 
-.time span{
-    background-color: rgb(63, 63, 63);
-    color: #e9e6e6;
-    border-radius: 5px;
-    display: inline-block;
-    width: 3.5vh;
+.time span {
+  background-color: rgb(63, 63, 63);
+  color: #e9e6e6;
+  border-radius: 5px;
+  display: inline-block;
+  width: 3.5vh;
 }
 
-.time .colon{
-    background: none;
-    color: black;
-    font-size: 30px;
-    width: auto;
-
+.time .colon {
+  background: none;
+  color: black;
+  font-size: 30px;
+  width: auto;
 }
 
-.time span:last-of-type{
-    opacity: 0.9;
-    width: 6.5vh;
+.time span:last-of-type {
+  opacity: 0.9;
+  width: 6.5vh;
 }
