--- a/src/style.css
+++ b/src/style.css
@@ -13,16 +13,17 @@ select {
 footer {
   text-align: center;
   font-size: 20px;
-  color: rgb(63, 59, 59);
+  color: rgb(120, 118, 118);
 }
 
 footer a {
-  color: rgb(97, 44, 146);
+  color: black;
   text-decoration: none;
 }
 
 footer a:hover {
-  opacity: 0.8;
+    color: #280101;
+    opacity: 0.8;
 }
 
 .container {
@@ -57,7 +58,7 @@ footer a:hover {
 
 .time {
   font-weight: bold;
-  font-size: 22px;
+  font-size: 24px;
   text-align: center;
   padding: 15px 5px;
 }
@@ -67,17 +68,10 @@ footer a:hover {
   color: #e9e6e6;
   border-radius: 5px;
   display: inline-block;
-  width: 3.5vh;
-}
-
-.time .colon {
-  background: none;
-  color: black;
-  font-size: 30px;
-  width: auto;
+  width: 5.5vh;
 }
 
 .time span:last-of-type {
-  opacity: 0.9;
+  opacity: 0.7;
   width: 6.5vh;
 }
