--- a/src/style.css
+++ b/src/style.css
@@ -14,11 +14,13 @@ footer {
   text-align: center;
   font-size: 20px;
   color: rgb(120, 118, 118);
+  padding: 18px;
 }
 
 footer a {
   color: black;
   text-decoration: none;
+  
 }
 
 footer a:hover {
@@ -45,6 +47,20 @@ footer a:hover {
   border-radius: 8px;
   margin: 14px 8px;
   font-size: 32px;
+}
+
+.cities a{
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    padding: 8px;
+    font-weight: bold;
+    color: #280101;
+}
+
+.cities a:hover{
+    opacity: 0.8;
 }
 
 .city {
