--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,9 @@ h1{
 
 select {
   font-size: 18px;
-  width: 100%;
+  width: 98%;
+  display: block;
+  margin: 23px auto;
   padding: 8px;
   border-radius: 8px;
   border: 2px solid black;
