--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,11 @@ body {
   background-color: #d9e8cf;
 }
 
-h1{
-    font-size: 36px;
-    text-align: center;
-    padding: 14px;
-    color: #560303;
+h1 {
+  font-size: 36px;
+  text-align: center;
+  padding: 14px;
+  color: #560303;
 }
 
 select {
@@ -29,12 +29,11 @@ footer {
 footer a {
   color: black;
   text-decoration: none;
-  
 }
 
 footer a:hover {
-    color: #280101;
-    opacity: 0.8;
+  color: #280101;
+  opacity: 0.8;
 }
 
 .container {
@@ -44,7 +43,7 @@ footer a:hover {
   max-width: 680px;
   border-radius: 12px;
   padding: 10px;
-  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
+  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.13), 0 1px 4px 0 rgba(0, 0, 0, 0.11);
 }
 
 .location {
@@ -58,18 +57,18 @@ footer a:hover {
   font-size: 32px;
 }
 
-.cities a{
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    font-size: 18px;
-    padding: 8px;
-    font-weight: bold;
-    color: #280101;
+.cities a {
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  padding: 8px;
+  font-weight: bold;
+  color: #280101;
 }
 
-.cities a:hover{
-    opacity: 0.8;
+.cities a:hover {
+  opacity: 0.8;
 }
 
 .city {
@@ -86,7 +85,6 @@ footer a:hover {
   font-size: 24px;
   text-align: center;
   padding: 15px 5px;
-  
 }
 
 .time span {
@@ -101,4 +99,13 @@ footer a:hover {
 .time span:last-of-type {
   opacity: 0.7;
   width: 6.5vh;
+}
+
+/*Small Screen*/
+@media only screen and (max-width: 600px) {
+  .location {
+    flex-direction: column;
+    padding: 12px;
+    margin: 14px 8px;
+  }
 }
