--- a/src/style.css
+++ b/src/style.css
@@ -105,6 +105,7 @@ footer a:hover {
 @media only screen and (max-width: 600px) {
   .location {
     flex-direction: column;
+    font-size: 28px;
     padding: 12px;
     margin: 14px 8px;
   }
